<resources>
    <string name="app_name">BIT</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="forgot_pass">Forgot Password ?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="no_account">Don\'t have an account? </string>
    <string name="user_name">Name</string>
    <string name="user_batch">Batch</string>
    <string name="user_roll">Roll No.</string>
    <string name="user_registration">Registration No.</string>
    <string name="user_branch">Branch</string>
    <string name="profile">Profile</string>


    <!--    batch list-->
    <string-array name="batch_list">
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
    </string-array>

    <!--    branch list-->
    <string-array name="branch_list">
        <item>CSE</item>
        <item>IT</item>
        <item>EE</item>
        <item>ME</item>
        <item>ECE</item>
    </string-array>

    <!--    all branches-->
    <string-array name="full_name_branch_list">
        <item>Mechanical</item>
        <item>Electrical</item>
        <item>Computer Science</item>
        <item>Information Technology</item>
        <item>Electronics and Communication</item>
        <item>Production</item>
        <item>Metallurgy</item>
        <item>Chemical</item>
        <item>Civil</item>
        <item>Mining</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="dash_board">Dashboard</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="about">About</string>
    <string name="write_about">Write Something about Yourself</string>
    <string name="academic_details">Academic Details</string>
    <string name="roll_number">Roll No.</string>
    <string name="registration_number">Reg. No.</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="club">Club</string>
    <string name="settings">Settings</string>
    <string name="profile_logout">Logout</string>
    <string name="privacy_and_security">Privacy and Security</string>
    <string name="data_and_storage">Data and Storage</string>
    <string name="ask_a_question">Ask a Question</string>
    <string name="codechef_link">Codechef link</string>
    <string name="linkedin_link">Linkedin link</string>
    <string name="facebook_link">Facebook link</string>
    <string name="instagram_link">Instagram link</string>
    <string name="github_link">Github link</string>
    <string name="codeforces_link">Codeforces link</string>
    <string name="write_your_name_here">Write your Name here</string>

    <string name="hncc">Hackathon and coding club</string>
    <string name="hncc_desc">Hackathon and coding club (Hncc) is the official coding and development club of BIT Sindri</string>
    <string name="visit_profile">visit profile</string>
    <string name="edit_profile">edit_profile</string>
    <string name="social_network">Social Network</string>


</resources>