<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:scrollbars="vertical"
        tools:context=".activity.LoginActivity">

        <ImageView
            android:layout_width="match_parent"
            android:scaleType="centerCrop"
            android:layout_height="0dp"
            android:layout_weight="0.16"
            android:src="@drawable/ic_group_36" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.60"
            android:layout_marginTop="-30dp"
            android:background="@drawable/sign_in_container_bg"
            android:orientation="vertical">

            <EditText
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/medium_margin"
                android:layout_marginTop="@dimen/big_margin"
                android:layout_marginRight="@dimen/medium_margin"
                android:background="@drawable/edit_text_signin"
                android:drawableStart="@drawable/ic_icon_user"
                android:drawablePadding="@dimen/drawable_padding_edit_text"
                android:hint="@string/user_name"
                android:inputType="textEmailAddress"
                android:padding="13dp"
                android:textColorHint="@color/text_hint" />

            <EditText
                android:id="@+id/user_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/medium_margin"
                android:layout_marginTop="@dimen/small_margin"
                android:layout_marginRight="@dimen/medium_margin"
                android:background="@drawable/edit_text_signin"
                android:drawableStart="@drawable/ic_icon_email"
                android:drawablePadding="@dimen/drawable_padding_edit_text"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="13dp"
                android:textColorHint="@color/text_hint" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/medium_margin"
                android:layout_marginTop="@dimen/small_margin"
                android:layout_marginRight="@dimen/medium_margin"
                android:background="@drawable/edit_text_signin"
                app:startIconDrawable="@drawable/ic_icon_batch"
                android:drawablePadding="@dimen/drawable_padding_edit_text"

                android:inputType="number"
                android:padding="13dp"
                android:textColorHint="@color/text_hint">

                <AutoCompleteTextView
                    android:id="@+id/select_batch"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/edit_text_signin"
                    android:inputType="none"
                    android:text="@string/user_batch"
                    android:textColorHint="@color/text_hint"/>

            </com.google.android.material.textfield.TextInputLayout>

            <EditText
                android:id="@+id/user_branch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/medium_margin"
                android:layout_marginTop="@dimen/small_margin"
                android:layout_marginRight="@dimen/medium_margin"
                android:background="@drawable/edit_text_signin"
                android:drawableStart="@drawable/ic_icon_email"
                android:drawablePadding="@dimen/drawable_padding_edit_text"
                android:hint="@string/user_branch"
                android:inputType="textEmailAddress"
                android:padding="13dp"
                android:textColorHint="@color/text_hint" />

            <EditText
                android:id="@+id/user_roll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/medium_margin"
                android:layout_marginTop="@dimen/small_margin"
                android:layout_marginRight="@dimen/medium_margin"
                android:background="@drawable/edit_text_signin"
                android:drawableStart="@drawable/ic_icon_roll"
                android:drawablePadding="@dimen/drawable_padding_edit_text"
                android:hint="@string/user_roll"
                android:inputType="textEmailAddress"
                android:padding="13dp"
                android:textColorHint="@color/text_hint" />

            <EditText
                android:id="@+id/user_registration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/medium_margin"
                android:layout_marginTop="@dimen/small_margin"
                android:layout_marginRight="@dimen/medium_margin"
                android:background="@drawable/edit_text_signin"
                android:drawableStart="@drawable/ic_icon_registration"
                android:drawablePadding="@dimen/drawable_padding_edit_text"
                android:hint="@string/user_registration"
                android:inputType="textEmailAddress"
                android:padding="13dp"
                android:textColorHint="@color/text_hint" />

            <EditText
                android:id="@+id/user_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/medium_margin"
                android:layout_marginTop="@dimen/small_margin"
                android:layout_marginRight="@dimen/medium_margin"
                android:background="@drawable/edit_text_signin"
                android:drawableStart="@drawable/ic_icon_password"
                android:drawablePadding="@dimen/drawable_padding_edit_text"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="15dp"
                android:textColorHint="@color/text_hint" />
            <EditText
                android:id="@+id/user_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/medium_margin"
                android:layout_marginTop="@dimen/small_margin"
                android:layout_marginRight="@dimen/medium_margin"
                android:background="@drawable/edit_text_signin"
                android:drawableStart="@drawable/ic_icon_user"
                android:drawablePadding="@dimen/drawable_padding_edit_text"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:padding="15dp"
                android:textColorHint="@color/text_hint" />

            <Button
                android:id="@+id/signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_margin"
                android:layout_marginLeft="@dimen/medium_margin"
                android:layout_marginRight="@dimen/medium_margin"
                android:layout_marginTop="@dimen/very_big_margin"
                android:padding="10dp"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textStyle="bold"
                app:backgroundTint="@color/app_theme" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>


