<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/club_profile_frag"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/club_profile_action_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_back_arrow" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/club_profile_action_bar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1">

            <ImageView
                android:id="@+id/club_cover_pic"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.6"
                android:scaleType="centerCrop"
                android:src="@drawable/image_9" />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="-50dp"
                android:layout_marginEnd="@dimen/small_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/profile_image"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:background="@drawable/circle_image_bg"
                    app:civ_border_color="@color/app_theme"
                    app:civ_border_width="5dp" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/club_profile_pic"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_icon_bottom_clubs" />


            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="@dimen/tiny_margin"
                android:paddingRight="@dimen/medium_margin"
                android:paddingLeft="@dimen/medium_margin">

                <TextView
                    android:id="@+id/club_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="@dimen/p2"
                    android:textStyle="bold"
                    tools:text="@string/hncc" />

                <TextView
                    android:id="@+id/club_short"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/card_margin"
                    android:textColor="@color/grey_90"
                    tools:text="@string/hncc_desc" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/medium_margin"
                    android:text="@string/about"
                    android:textColor="@color/app_theme"
                    android:textSize="@dimen/p2" />

                <TextView
                    android:id="@+id/club_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/tiny_margin"
                    android:textColor="@color/grey_90"
                    tools:text="@string/hncc_desc" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2.5px"
                    android:layout_marginTop="@dimen/tiny_margin"
                    android:layout_marginBottom="@dimen/tiny_margin"
                    android:background="@color/grey_40" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/social_network"
                    android:textColor="@color/app_theme"
                    android:textSize="@dimen/p2" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/tiny_margin"
                    android:layout_marginBottom="@dimen/card_margin"
                    android:orientation="horizontal"
                    android:padding="@dimen/card_margin">

                    <androidx.cardview.widget.CardView
                        android:layout_width="@dimen/icon_size"
                        android:layout_height="@dimen/icon_size"
                        android:layout_marginEnd="@dimen/icon_margin"
                        app:cardCornerRadius="20dp">

                        <ImageButton
                            android:id="@+id/profile_codechef"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:background="@drawable/circle_button_bg"
                            android:src="@drawable/ic_codechef"
                            android:tag="@string/codechef_link" />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="@dimen/icon_size"
                        android:layout_height="@dimen/icon_size"
                        android:layout_marginEnd="@dimen/icon_margin"
                        app:cardCornerRadius="20dp">
                    <ImageButton
                        android:id="@+id/profile_linkedin"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="@drawable/circle_button_bg"
                        android:src="@drawable/ic_linkedin"
                        android:tag="@string/linkedin_link" />
                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        android:layout_width="@dimen/icon_size"
                        android:layout_height="@dimen/icon_size"
                        android:layout_marginEnd="@dimen/icon_margin"
                        app:cardCornerRadius="20dp">
                    <ImageButton
                        android:id="@+id/profile_facebook"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="@drawable/circle_button_bg"
                        android:src="@drawable/ic_facebook"
                        android:tag="@string/facebook_link" />
                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        android:layout_width="@dimen/icon_size"
                        android:layout_height="@dimen/icon_size"
                        android:layout_marginEnd="@dimen/icon_margin"
                        app:cardCornerRadius="20dp">
                    <ImageButton
                        android:id="@+id/profile_instagram"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="@drawable/circle_button_bg"
                        android:src="@drawable/ic_instagram"
                        android:tag="@string/instagram_link" />
                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        android:layout_width="@dimen/icon_size"
                        android:layout_height="@dimen/icon_size"
                        android:layout_marginEnd="@dimen/icon_margin"
                        app:cardCornerRadius="20dp">
                    <ImageButton
                        android:id="@+id/profile_github"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="@drawable/circle_button_bg"
                        android:src="@drawable/ic_github"
                        android:tag="@string/github_link" />
                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        android:layout_width="@dimen/icon_size"
                        android:layout_height="@dimen/icon_size"
                        android:layout_marginEnd="@dimen/icon_margin"
                        app:cardCornerRadius="20dp">
                    <ImageButton
                        android:id="@+id/profile_codeforces"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="@drawable/circle_button_bg"
                        android:src="@drawable/ic_codeforces"
                        android:tag="@string/codechef_link" />
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2.5px"
                    android:layout_marginTop="@dimen/tiny_margin"
                    android:layout_marginBottom="@dimen/tiny_margin"
                    android:background="@color/grey_40" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>